Added Bootsfaces support and rows for cart and items.

--- a/src/java/errors.properties
+++ b/src/java/errors.properties
@@ -6,3 +6,4 @@ emptyField=F\u00e4ltet f\u00e5r ej vara tomt.
 notNumber=F\u00e4ltet f\u00e5r bara inneh\u00e5lla siffror.
 notYear=\u00c5r m\u00e5ste f\u00f6lja formatet "YYYY" (ex: 2001).
 negativeNumber=F\u00e4ltet f\u00e5r bara inneh\u00e5lla positiva tal.
+cartIsEmpty=Du m\u00e5ste ha n\u00e5got i din kundvagn f\u00f6r att best\u00e4lla.
